syntax = "proto3";

package rpc_demo.nice;

service Greeter{
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}